初步实现棋盘玩法的PVP模式。